--- a/public/frontend/css/default.css
+++ b/public/frontend/css/default.css
@@ -189,3 +189,70 @@ h6 {
 .bgg{
 	background: var(--g2c);
 }
+
+
+
+.autoplay img {
+    width: 100%;
+}
+
+.slick-dots li {
+    width: 10px;
+    height: 10px;
+    background: blue;
+    border-radius: 50%;
+}
+
+.slick-dots li button::before {
+    display: none;
+}
+
+
+
+.nxt {
+    position: absolute;
+    bottom: -45px;
+    font-size: 24px;
+    cursor: pointer;
+    right: 45%;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    background: var(--wc);
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0px 2px 13px -5px #919191;
+    border: 1px solid rgba(145, 145, 145, 0.1);
+    transition: .4s;
+}
+
+
+.prv {
+    position: absolute;
+    bottom: -45px;
+    font-size: 24px;
+    cursor: pointer;
+    left: 45%;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    background: var(--wc);
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0px 2px 13px -5px #919191;
+    border: 1px solid rgba(145, 145, 145, 0.1);
+    transition: .4s;
+}
+
+.slider-item {
+    margin: 0 10px;
+}
+
+.slider-width-control {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.slider-box {
+    position: relative;
+}
